turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:26: error: not found: value n
	if(n==rule.length-1){ 
           ^LangtonsAnt:35: error: not found: value n
		if(rule(n)=='R'){
                        ^